force-app/main/default/objects/Logging_Settings__mdt/Logging_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Logging Settings</label>
    <pluralLabel>Logging Settings</pluralLabel>
</CustomObject>