force-app/main/default/objects/Logging_Settings__mdt/fields/Disable_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Automation__c</fullName>
    <label>Disable Automation</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>