force-app/main/default/objects/Logging_Settings__mdt/fields/Disable_External_Sync__c.field-meta.xml
<CustomField>
    <fullName>Disable_External_Sync__c</fullName>
    <label>Disable External Sync</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>