force-app/main/default/objects/Logging_Settings__mdt/fields/Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logging__c</fullName>
    <label>Enable Logging</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>