force-app/main/default/objects/Logging_Settings__mdt/fields/Min_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Min_Log_Level__c</fullName>
    <label>Min Log Level</label>
    <type>Text</type>
    <length>10</length>
</CustomField>