force-app/main/default/objects/Logging_Settings__mdt/fields/Performance_Logs__c.field-meta.xml
<CustomField>
    <fullName>Performance_Logs__c</fullName>
    <label>Performance Logs</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>