force-app/main/default/objects/Logging_Settings__mdt/fields/Persist_Logs__c.field-meta.xml
<CustomField>
    <fullName>Persist_Logs__c</fullName>
    <label>Persist Logs</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>